k8s/awesome-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awesome-backend
  template:
    metadata:
      labels:
        app: awesome-backend
    spec:
      containers:
      - name: backend
        image: harbor.allocsoc.net/awesome-crawler/awesome-backend:cf59821268b974abba3ce22912128a8cb2906685
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            memory: "1Gi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 8000
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /api/v1/health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 20
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: 8000
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: awesome-backend-service
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: awesome-backend
