k8s/awesome-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-web-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - awesome.allocsoc.net
      secretName: awesome-allocsoc-net-tls
  rules:
    - host: awesome.allocsoc.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awesome-web-service
                port:
                  number: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awesome-web
  template:
    metadata:
      labels:
        app: awesome-web
    spec:
      containers:
      - name: web
        image: harbor.allocsoc.net/awesome-crawler/awesome-web:1d233c7b0d229ae89370d45c5987265fe09a332c
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: awesome-web-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: awesome-web
